--- a/index.html
+++ b/index.html
@@ -5,8 +5,80 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+    <!-- Меню -->
+    <header>
+      <nav>
+        <ul>
+          <li>главная</li>
+          <li>О Седоне</li>
+          <li>Гостинницы</li>
+        </ul>
+        <input type="button" value="Хочу сюда">
+      </nav>
+    </header>
+    <main>
+      <!-- первый экран -->
+      <section>
+        <h1>Седона — небольшой городок в Аризоне,
+          заслуживающий большего!</h1>
+          <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      </section>
+      <!-- преимущества -->
+      <section>
+        <h3>Настоящий
+          городок</h3>
+          <p>— №1 —</p>
+          <p>Седона — не аттракцион для туристов, там течёт
+            своя жизнь</p>
+            <ul>
+              <li>Жилье</li>
+              <li>Еда</li>
+              <li>Сувениры</li>
+            </ul>
+      </section>
+      <section>
+        <h3>Там есть
+          мост дьявола</h3>
+          <p>— №2 —</p>
+          <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          <h3>Небольшая
+            площадь</h3>
+            <p>— №3 —</p>
+            <p>Все достопримечательности
+              находятся очень близко</p>
+              <h3>
+                Красивая дорога
+              </h3>
+              <p>— №4 —</p>
+              <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              <h3>Мало
+                туристов</h3>
+                <p>— №5 —</p>
+                <p>Большинство едет в Гранд Каньон и толпится там</p>
+      </section>
+      <!-- Поиск гостинницы -->
+      <section>
+        <h2>Заинтересовались?</h2>
+        <p>Укажите предполагаемые даты поездки,
+          и мы покажем вам лучшие предложения гостиниц в Седоне
+          </p>
+          <input type="button" value="Поиск гостиницы в седоне">
+      </section>
+      <!-- Рассылка -->
+      <section>
+        <form>
+          <h3>Подпишитесь на рассылку</h3>
+          <p>Только полезная информация и никакого спама,
+            честное бойскаутское!</p>
+            <input type="text" name="e-mail" placeholder="Ваш e-mail">
+            <input type="submit" value="подписаться">
+        </form>
+      </section>
+    </main>
+     <footer>
+       ссылки на соцсети телефон лого академии
+     </footer>
 
   </body>
+
 </html>
