--- a/index.html
+++ b/index.html
@@ -7,65 +7,116 @@
   <body>
     <!-- Меню -->
     <header>
-      <nav>
-        <ul>
-          <li>главная</li>
-          <li>О Седоне</li>
-          <li>Гостинницы</li>
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="index.html">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="about.html">О Седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="hotels.html">Гостинницы</a>
+          </li>
         </ul>
-        <input type="button" value="Хочу сюда">
+        <img src="" class="logo" alt="Логотип Седона">
+        <ul class="navigation-list navigation-user" >
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">
+                Поиск
+              </span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">
+                Избранное
+              </span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <button>
+                Хочу сюда
+              </button>
+            </a>
+          </li>
+        </ul>
       </nav>
     </header>
-    <main>
-      <!-- первый экран -->
-      <section>
-        <h1>Седона — небольшой городок в Аризоне,
+    <main class="main-index">
+      <h1>Седона — небольшой городок в Аризоне,
           заслуживающий большего!</h1>
-          <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
-      </section>
-      <!-- преимущества -->
-      <section>
-        <h3>Настоящий
-          городок</h3>
-          <p>— №1 —</p>
-          <p>Седона — не аттракцион для туристов, там течёт
-            своя жизнь</p>
-            <ul>
-              <li>Жилье</li>
-              <li>Еда</li>
-              <li>Сувениры</li>
-            </ul>
-      </section>
-      <section>
-        <h3>Там есть
-          мост дьявола</h3>
-          <p>— №2 —</p>
-          <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-          <h3>Небольшая
-            площадь</h3>
-            <p>— №3 —</p>
-            <p>Все достопримечательности
-              находятся очень близко</p>
-              <h3>
-                Красивая дорога
-              </h3>
+        <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      <section class="advantage">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <ul class="advantage-list">
+          <li class="advantage-item">
+            <h3>Настоящий
+              городок</h3>
+              <p>— №1 —</p>
+              <p>
+                Седона — не аттракцион для туристов, там течёт
+своя жизнь
+              </p>
+              <ul class="advantage-item">
+                <li class="advantage-list">
+                  <h4>Жильё</h4>
+                  <p>Рекомендуем пожить
+                    в настоящем мотеле,
+                    всё как в кино!</p>
+                </li>
+                <li class="advantage-list">
+                  <h4>Еда</h4>
+                  <p>Всегда заказывайте
+                    топовый фирменный бургер, вы не разочаруетесь!</p>
+                </li>
+                <li class="advantage-list">
+                  <h4>Сувениры</h4>
+                  <p>Не только китайского,
+                    но и настоящего местного производства!</p>
+                </li>
+              </ul>
+          </li>
+          <li class="advantage-list">
+            <h3>Там есть
+              мост дьявола</h3>
+              <p>— №2 —</p>
+              <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          </li>
+          <li class="advantage-list">
+            <h3>Небольшая
+              площадь</h3>
+              <p>— №3 —</p>
+              <p>Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="advantage-list">
+            <h3>Красивая дорога</h3>
               <p>— №4 —</p>
               <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-              <h3>Мало
-                туристов</h3>
-                <p>— №5 —</p>
-                <p>Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+          <li class="advantage-list">
+            <h3>Мало туристов</h3>
+              <p>— №5 —</p>
+              <p>Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+        </ul>
       </section>
       <!-- Поиск гостинницы -->
       <section>
-        <h2>Заинтересовались?</h2>
+        <h2 class="visually-hidden">Поиск гостинницы</h2>
+        <h3>Заинтересовались?</h3>
         <p>Укажите предполагаемые даты поездки,
           и мы покажем вам лучшие предложения гостиниц в Седоне
           </p>
-          <input type="button" value="Поиск гостиницы в седоне">
+          <button class="search">
+            ПОИСК ГОСТИНИЦЫ В СЕДОНЕ
+          </button>
       </section>
       <!-- Рассылка -->
       <section>
+        <h2 class="visually-hidden">Подписаться на рассылку</h2>
         <form>
           <h3>Подпишитесь на рассылку</h3>
           <p>Только полезная информация и никакого спама,
@@ -75,8 +126,38 @@
         </form>
       </section>
     </main>
-     <footer>
-       ссылки на соцсети телефон лого академии
+
+     <footer class="page-footer">
+       <section>
+         <h3 class="visually-hidden">Социальные сети</h3>
+         <ul class="footer-social-list">
+           <li class="footer-social-item">
+            <a class="button" href="#">
+              <span class="visually-hidden">Твиттер</span>
+            </a>
+           </li>
+           <li class="footer-social-item">
+            <a class="button" href="#">
+              <span class="visually-hidden">Фейсбук</span>
+            </a>
+           </li>
+           <li class="footer-social-item">
+            <a class="button" href="#">
+              <span class="visually-hidden">Ютуб</span>
+            </a>
+           </li>
+         </ul>
+       </section>
+       <section>
+        <h3 class="visually-hidden">Телефон</h3>
+        <p class="telephone">+7 (812) 812-12-12</p>
+      </section>
+      <section>
+        <h3 class="visually-hidden">Контакты академии</h3>
+        <a href="https://htmlacademy.ru/" class="academy">
+        <img src="" alt="logo-academy">
+        </a>
+      </section>
      </footer>
 
   </body>
