Добавлены главные элементы страницы hotels, добавлен класс для "рассылки"

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           </button>
       </section>
       <!-- Рассылка -->
-      <section>
+      <section class="mailing-index">
         <h2 class="visually-hidden">Подписаться на рассылку</h2>
         <form>
           <h3>Подпишитесь на рассылку</h3>
