--- a/hotels.html
+++ b/hotels.html
@@ -16,7 +16,7 @@
             <a class="navigation-link" href="about.html">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="hotels.html">Гостинницы</a>
+            <a class="navigation-link-current" href="hotels.html">Гостинницы</a>
           </li>
         </ul>
         <img src="" class="logo" alt="Логотип Седона">
@@ -46,9 +46,201 @@
       </nav>
     </header>
     <main class="main-hotels">
+      <header class="hotels-heder">
+        <h1 class="hotels-heder-title">
+          Гостиницы Седоны
+        </h1>
+        <ul class="breadcrumbs">
+          <li class="visually-hidden">
+            <a class="breadcrumbs-link" href="index.html">
+              Главная
+            </a>
+          </li>
+          <li class="breadcrumbs-item">
+            <a class="breadcrumbs-link" href="hotels.html">
+              Гостиницы
+            </a>
+          </li>
+        </ul>
+      </header>
+      <section class="hotels-search">
+        <h2 class="visually-hidden">Фильтры для поиска гостиницы</h2>
+        <form class="hotels-filter" action="https://echo.htmlacademy.ru/" method="get">
+
+          <fieldset class="hotels-filter-group">
+            <legend class="hotels-filter-title">Инфраструктура:</legend>
+            <ul class="hotels-filter-list">
+              <li class="hotels-filter-item">
+                <label class="control">
+                  <input class="visually-hidden controll-input" type="checkbox" name="pool" checked>
+                  <span class="control-mark"></span>
+                  <span class="control-lapel">Бассейн</span>
+                </label>
+              </li>
+              <li class="hotels-filter-item">
+                <label class="control">
+                  <input class="visually-hidden controll-input" type="checkbox" name="parking" checked>
+                  <span class="control-mark"></span>
+                  <span class="control-lapel">Парковка</span>
+                </label>
+              </li>
+              <li class="hotels-filter-item">
+                <label class="control">
+                  <input class="visually-hidden controll-input" type="checkbox" name="Wi-Fi">
+                  <span class="control-mark"></span>
+                  <span class="control-lapel">Wi-Fi</span>
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+
+          <fieldset class="hotels-filter-group">
+            <legend class="hotels-filter-title">Тип жилья:</legend>
+            <ul class="hotels-filter-list">
+              <li class="hotels-filter-item">
+                <label class="control">
+                  <input class="visually-hidden controll-input" type="radio" name="type-hotels" value="hotel" checked>
+                  <span class="control-mark"></span>
+                  <span class="control-lapel">Гостинница</span>
+                </label>
+                <li class="hotels-filter-item">
+                  <label class="control">
+                    <input class="visually-hidden controll-input" type="radio" name="type-hotels" value="motel">
+                    <span class="control-mark"></span>
+                    <span class="control-lapel">Мотель</span>
+                  </label>
+              </li>
+              <li class="hotels-filter-item">
+                <label class="control">
+                  <input class="visually-hidden controll-input" type="radio" name="type-hotels" value="apartments">
+                  <span class="control-mark"></span>
+                  <span class="control-lapel">Апартаменты</span>
+                </label>
+            </li>
+            </ul>
+          </fieldset>
+
+          <fieldset class="hotels-filter-group">
+            <legend class="hotels-filter-title">Стоимость, ₽:</legend>
+            <button class="range-toggle toggle-min" type="button">
+              <span class="visually-hidden">Изменить минимальную цену</span>
+            </button>
+            <button class="range-toggle toggle-max" type="button">
+              <span class="visually-hidden">Изменить максимальную цену</span>
+            </button>
+            <label class="hotels-filter-input">
+             от<input class="hotels-filter-input" type="number" name="min-price" value="0">
+          </label>
+          <label class="hotels-filter-input">
+            до<input class="hotels-filter-input" type="number" name="max-price" value="9000">
+         </label>
+          </fieldset>
+        <button class="button" type="submit">Применить</button>
+        <button class="button" type="reset">Сбросить</button>
+        </form>
+
+        <form class="sorting-type">
+          <label class="visually-hidden" for="sorting">Сортировка</label>
+          <select class="select-control" id="sorting" name="sorting">
+            <option value="cheap">Сначала дешёвое</option>
+            <option value="expensive">Сначала дорогое</option>
+            <option value="popular">Сначала популярное</option>
+          </select>
+          <button class="visually-hidden" type="submit">Отсортировать</button>
+        </form>
+        <a href="#" class="buttom buttom-tile">
+          <span class="visually-hidden">Показать карточки</span>
+        </a>
+        <a href="#" class="buttom buttom-slide">
+          <span class="visually-hidden">Показать слайды</span>
+        </a>
+        <a href="#" class="buttom buttom-list">
+          <span class="visually-hidden">Показать список</span>
+        </a>
+
+        <ul class="hotels-list">
+          <li class="hotels-card">
+            <a class="hotels-card-link" href="#">
+              <img class="hotels-card-img" src="" alt="Гостиница Amara Resort & Spa">
+              <h3 class="hotels-card-title">Amara Resort & Spa</h3>
+            </a>
+              <span class="hotels-card-type">Гостиница</span>
+              <b class="hotels-card-price">От 4000 ₽</b>
+            <a href="#" class="hotels-card-buttom buttom">Подробнее</a>
+            <button class="button">В избранное</button>
+            <span class="hotels-rating">Рейтинг: 8,5</span>
+          </li>
+          <li class="hotels-card">
+            <a class="hotels-card-link" href="#">
+              <img class="hotels-card-img" src="" alt="Мотель Desert Quail Inn">
+              <h3 class="hotels-card-title">Desert Quail Inn</h3>
+            </a>
+              <span class="hotels-card-type">Мотель</span>
+              <b class="hotels-card-price">От 3000 ₽</b>
+            <a href="#" class="hotels-card-buttom buttom">Подробнее</a>
+            <span class="hotels-rating">Рейтинг: 8,9</span>
+          </li>
+          <li class="hotels-card">
+            <a class="hotels-card-link" href="#">
+              <img class="hotels-card-img" src="" alt="Апартаменты Villas at Poco Diablo">
+              <h3 class="hotels-card-title">Villas at Poco Diablo</h3>
+            </a>
+              <span class="hotels-card-type">Апартаменты</span>
+              <b class="hotels-card-price">От 2000 ₽</b>
+            <a href="#" class="hotels-card-buttom buttom">Подробнее</a>
+            <button class="button">В избранном</button>
+            <span class="hotels-rating">Рейтинг: 9,2</span>
+          </li>
+          <li class="hotels-card">
+            <a class="hotels-card-link" href="#">
+              <img class="hotels-card-img" src="" alt="Гостиница GreenTree Inn">
+              <h3 class="hotels-card-title">GreenTree Inn</h3>
+            </a>
+              <span class="hotels-card-type">Гостиница</span>
+              <b class="hotels-card-price">От 3000 ₽</b>
+            <a href="#" class="hotels-card-buttom buttom">Подробнее</a>
+            <button class="button">В избранноe</button>
+            <span class="hotels-rating">Рейтинг: 9,2</span>
+          </li>
+        </ul>
+
+        <button class="show-more">Показать еще</button>
+
+        <ul class="pagination">
+          <li class="pagination-item">
+            <a class="pagination-link pagination-current" href="#">1</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">2</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">3</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">4</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">...</a>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">10</a>
+            </li>
+          </li>
+        </ul>
+
+        <form class="hotels-page">
+          <label class="hotels-page" for="sorting">Гостиниц на странице</label>
+          <select class="select-control" id="sorting" name="sorting">
+            <option value="4">4</option>
+            <option value="8">8</option>
+            <option value="12">12</option>
+          </select>
+          <button class="visually-hidden" type="submit">Показать</button>
+        </form>
+      </section>
+
 
      <!-- Рассылка -->
-     <section class="">
+     <section class="mailing-hotels">
       <h2 class="visually-hidden">Подписаться на рассылку</h2>
       <form>
         <h3>Подпишитесь на рассылку</h3>
