--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <!-- Меню -->
-    <header>
+    <header class="page-header">
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -57,8 +57,7 @@
               городок</h3>
               <p>— №1 —</p>
               <p>
-                Седона — не аттракцион для туристов, там течёт
-своя жизнь
+                Седона — не аттракцион для туристов, там течёт своя жизнь
               </p>
               <ul class="advantage-item">
                 <li class="advantage-list">
@@ -127,38 +126,38 @@
       </section>
     </main>
 
-     <footer class="page-footer">
-       <section>
-         <h3 class="visually-hidden">Социальные сети</h3>
-         <ul class="footer-social-list">
-           <li class="footer-social-item">
-            <a class="button" href="#">
-              <span class="visually-hidden">Твиттер</span>
-            </a>
-           </li>
-           <li class="footer-social-item">
-            <a class="button" href="#">
-              <span class="visually-hidden">Фейсбук</span>
-            </a>
-           </li>
-           <li class="footer-social-item">
-            <a class="button" href="#">
-              <span class="visually-hidden">Ютуб</span>
-            </a>
-           </li>
-         </ul>
-       </section>
-       <section>
-        <h3 class="visually-hidden">Телефон</h3>
-        <p class="telephone">+7 (812) 812-12-12</p>
+    <footer class="page-footer">
+      <section class="socials">
+        <h3 class="visually-hidden">Социальные сети</h3>
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+           <a class="button" href="#">
+             <span class="visually-hidden">Твиттер</span>
+           </a>
+          </li>
+          <li class="footer-social-item">
+           <a class="button" href="#">
+             <span class="visually-hidden">Фейсбук</span>
+           </a>
+          </li>
+          <li class="footer-social-item">
+           <a class="button" href="#">
+             <span class="visually-hidden">Ютуб</span>
+           </a>
+          </li>
+        </ul>
       </section>
-      <section>
-        <h3 class="visually-hidden">Контакты академии</h3>
-        <a href="https://htmlacademy.ru/" class="academy">
-        <img src="" alt="logo-academy">
-        </a>
-      </section>
-     </footer>
+      <section class="telephone">
+       <h3 class="visually-hidden">Телефон</h3>
+       <p class="telephone">+7 (812) 812-12-12</p>
+     </section>
+     <section  class="academy">
+       <h3 class="visually-hidden">Контакты академии</h3>
+       <a href="https://htmlacademy.ru/" class="academy-link">
+       <img class="academy-img" src="" alt="logo-academy">
+       </a>
+     </section>
+    </footer>
 
   </body>
 
