--- a/hotels.html
+++ b/hotels.html
@@ -16,10 +16,12 @@
             <a class="navigation-link" href="about.html">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link-current" href="hotels.html">Гостинницы</a>
+            <a class="navigation-link-current" href="#">Гостинницы</a>
           </li>
         </ul>
-        <img src="" class="logo" alt="Логотип Седона">
+        <a class="logo" href="index.html">
+          <img src="" class="logo" alt="Логотип Седона">
+        </a>
         <ul class="navigation-list navigation-user" >
           <li class="navigation-item">
             <a class="navigation-link" href="#">
@@ -36,11 +38,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <button>
-                Хочу сюда
-              </button>
-            </a>
+            <a class="navigation-link" href="#">Хочу сюда</a>
           </li>
         </ul>
       </nav>
@@ -65,23 +63,22 @@
       </header>
       <section class="hotels-search">
         <h2 class="visually-hidden">Фильтры для поиска гостиницы</h2>
-        <form class="hotels-filter" action="https://echo.htmlacademy.ru/" method="get">
-
-          <fieldset class="hotels-filter-group">
-            <legend class="hotels-filter-title">Инфраструктура:</legend>
-            <ul class="hotels-filter-list">
-              <li class="hotels-filter-item">
+        <form class="hotels-form" action="https://echo.htmlacademy.ru/" method="get">
+          <fieldset class="hotels-form-fieldset">
+            <legend class="hotels-form-legend">Инфраструктура:</legend>
+            <ul class="hotels-form-list">
+              <li class="hotels-form-item">
                 <label class="control">
-                  <input class="visually-hidden controll-input" type="checkbox" name="pool" checked>
+                  <input class="visually-hidden control-input" type="checkbox" name="pool" checked>
                   <span class="control-mark"></span>
-                  <span class="control-lapel">Бассейн</span>
+                  <span class="control-label">Бассейн</span>
                 </label>
               </li>
               <li class="hotels-filter-item">
                 <label class="control">
-                  <input class="visually-hidden controll-input" type="checkbox" name="parking" checked>
+                  <input class="visually-hidden control-input" type="checkbox" name="parking" checked>
                   <span class="control-mark"></span>
-                  <span class="control-lapel">Парковка</span>
+                  <span class="control-label">Парковка</span>
                 </label>
               </li>
               <li class="hotels-filter-item">
@@ -164,8 +161,8 @@
           <li class="hotels-card">
             <a class="hotels-card-link" href="#">
               <img class="hotels-card-img" src="" alt="Гостиница Amara Resort & Spa">
-              <h3 class="hotels-card-title">Amara Resort & Spa</h3>
             </a>
+            <h3 class="hotels-card-title">Amara Resort & Spa</h3>
               <span class="hotels-card-type">Гостиница</span>
               <b class="hotels-card-price">От 4000 ₽</b>
             <a href="#" class="hotels-card-buttom buttom">Подробнее</a>
@@ -175,8 +172,8 @@
           <li class="hotels-card">
             <a class="hotels-card-link" href="#">
               <img class="hotels-card-img" src="" alt="Мотель Desert Quail Inn">
-              <h3 class="hotels-card-title">Desert Quail Inn</h3>
             </a>
+            <h3 class="hotels-card-title">Desert Quail Inn</h3>
               <span class="hotels-card-type">Мотель</span>
               <b class="hotels-card-price">От 3000 ₽</b>
             <a href="#" class="hotels-card-buttom buttom">Подробнее</a>
@@ -185,8 +182,8 @@
           <li class="hotels-card">
             <a class="hotels-card-link" href="#">
               <img class="hotels-card-img" src="" alt="Апартаменты Villas at Poco Diablo">
-              <h3 class="hotels-card-title">Villas at Poco Diablo</h3>
             </a>
+            <h3 class="hotels-card-title">Villas at Poco Diablo</h3>
               <span class="hotels-card-type">Апартаменты</span>
               <b class="hotels-card-price">От 2000 ₽</b>
             <a href="#" class="hotels-card-buttom buttom">Подробнее</a>
@@ -223,9 +220,9 @@
           </li>
           <li class="pagination-item">
             <a class="pagination-link" href="#">...</a>
-            <li class="pagination-item">
+          </li>
+          <li class="pagination-item">
               <a class="pagination-link" href="#">10</a>
-            </li>
           </li>
         </ul>
 
