--- a/index.html
+++ b/index.html
@@ -45,13 +45,17 @@
         </ul>
       </nav>
     </header>
+  <!-- первый экран -->  
     <main class="main-index">
+      <section class="welcome">
+        <img src="" alt="Добро пожаловать в Седону" class="welcome-img">
+      </section>
       <h1>Седона — небольшой городок в Аризоне,
           заслуживающий большего!</h1>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       <section class="advantage">
         <h2 class="visually-hidden">Преимущества</h2>
-        <ul class="advantage-list">
+        <ol class="advantage-list">
           <li class="advantage-item">
             <h3>Настоящий
               городок</h3>
@@ -100,32 +104,32 @@
               <p>— №5 —</p>
               <p>Большинство едет в Гранд Каньон и толпится там</p>
           </li>
-        </ul>
+        </ol>
       </section>
       <!-- Поиск гостинницы -->
-      <section>
+      <section class="search-hotels">
         <h2 class="visually-hidden">Поиск гостинницы</h2>
-        <h3>Заинтересовались?</h3>
-        <p>Укажите предполагаемые даты поездки,
-          и мы покажем вам лучшие предложения гостиниц в Седоне
-          </p>
-          <button class="search">
-            ПОИСК ГОСТИНИЦЫ В СЕДОНЕ
+          <p class="search-hotels-title">Заинтересовались?</p>
+          <p class="search-hotels-description">Укажите предполагаемые даты поездки,
+          и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <a href="#" class="search-hotels-link">
+            поиск гостиницы в седоне
           </button>
       </section>
+
       <!-- Рассылка -->
-      <section class="mailing-index">
-        <h2 class="visually-hidden">Подписаться на рассылку</h2>
-        <form>
-          <h3>Подпишитесь на рассылку</h3>
-          <p>Только полезная информация и никакого спама,
+      <section class="mailing">
+        <form class="mailing-form">
+          <h3 class="mailing-title">Подпишитесь на рассылку</h3>
+          <p class="mailing-description">Только полезная информация и никакого спама,
             честное бойскаутское!</p>
-            <input type="text" name="e-mail" placeholder="Ваш e-mail">
-            <input type="submit" value="подписаться">
+            <input type="text" name="e-mail" placeholder="Ваш e-mail" class="mailing-input">
+            <button type="submit" value="подписаться" class="mailing-buttom">
         </form>
       </section>
     </main>
 
+    <!-- footer -->
     <footer class="page-footer">
       <section class="socials">
         <h3 class="visually-hidden">Социальные сети</h3>
@@ -147,11 +151,12 @@
           </li>
         </ul>
       </section>
+
       <section class="telephone">
        <h3 class="visually-hidden">Телефон</h3>
-       <p class="telephone">+7 (812) 812-12-12</p>
+       <a href="tel:+78128121212">+7 (812) 812-12-12</a>
      </section>
-     <section  class="academy">
+     <section class="academy">
        <h3 class="visually-hidden">Контакты академии</h3>
        <a href="https://htmlacademy.ru/" class="academy-link">
        <img class="academy-img" src="" alt="logo-academy">
