Подключила стили, шрифты и добавила логотип на главную

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <!-- Меню -->
@@ -19,7 +20,7 @@
             <a class="navigation-link" href="hotels.html">Гостинницы</a>
           </li>
         </ul>
-        <img src="" class="logo" alt="Логотип Седона">
+        <img src="images/sedona.svg" class="logo" alt="Логотип Седона">
         <ul class="navigation-list navigation-user" >
           <li class="navigation-item">
             <a class="navigation-link" href="#">
