внесены правки по замечаниям наставника, дз - Разметка внутренней страницы

--- a/hotels.html
+++ b/hotels.html
@@ -16,11 +16,11 @@
             <a class="navigation-link" href="about.html">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link-current" href="#">Гостинницы</a>
+            <a class="navigation-link-current" href="">Гостинницы</a>
           </li>
         </ul>
         <a class="logo" href="index.html">
-          <img src="" class="logo" alt="Логотип Седона">
+          <img src="" class="logo-img" alt="Логотип Седона">
         </a>
         <ul class="navigation-list navigation-user" >
           <li class="navigation-item">
@@ -162,7 +162,9 @@
             <a class="hotels-card-link" href="#">
               <img class="hotels-card-img" src="" alt="Гостиница Amara Resort & Spa">
             </a>
-            <h3 class="hotels-card-title">Amara Resort & Spa</h3>
+            <a class="hotels-card-link" href="#">
+              <h3 class="hotels-card-title">Amara Resort & Spa</h3>
+            </a>
               <span class="hotels-card-type">Гостиница</span>
               <b class="hotels-card-price">От 4000 ₽</b>
             <a href="#" class="hotels-card-buttom buttom">Подробнее</a>
