--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <!-- Меню -->
@@ -46,7 +46,7 @@
         </ul>
       </nav>
     </header>
-  <!-- первый экран -->  
+  <!-- первый экран -->
     <main class="main-index">
       <section class="welcome">
         <img src="" alt="Добро пожаловать в Седону" class="welcome-img">
@@ -125,7 +125,7 @@
           <p class="mailing-description">Только полезная информация и никакого спама,
             честное бойскаутское!</p>
             <input type="text" name="e-mail" placeholder="Ваш e-mail" class="mailing-input">
-            <button type="submit" value="подписаться" class="mailing-buttom">
+            <button type="submit" class="mailing-buttom">подписаться</button>
         </form>
       </section>
     </main>
