--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a class="navigation__link" href="#">О Седоне</a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link" href="hotels.html">Гостинницы</a>
+            <a class="navigation__link" href="hotels.html">Гостиницы</a>
           </li>
         </ul>
         <img src="images/sedona.svg" class="logo" alt="Логотип Седона">
