--- a/hotels.html
+++ b/hotels.html
@@ -19,7 +19,7 @@
             <a class="navigation__link" href="#">О Седоне</a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link" href="hotels.html">Гостиницы</a>
+            <a class="navigation__link navigation__link-hotels" href="hotels.html">Гостиницы</a>
           </li>
         </ul>
         <a class="logo__sedona" href="index.html">
