--- a/hotels.html
+++ b/hotels.html
@@ -144,7 +144,7 @@
          </label>
           </fieldset>
           <div class="hotels__buttoms">
-        <button class="button__apply button__blue" type="submit">Применить</button>
+        <button class="button__apply" type="submit">Применить</button>
         <button class="button__reset" type="reset">Сбросить</button>
       </div>
         </form>
